# file-crypt-cli

./: CMakeLists.txt  LICENCE  LICENCE.md  README.md  getopt.c  getopt.h  main.c
.github/workflows/: bulid.yml  release.yml
